--- a/index.html
+++ b/index.html
@@ -32,6 +32,13 @@
 		<div class="periodicTable">
 
 			<div id="atom"> <div class="atom"></div> </div>
+
+			<div id="sitePopup">
+				<div class="infoContainer">
+					<span class="close">X</span>
+					<iframe></iframe>
+				</div>
+			</div>
 			
 			<div id="infoPopup">
 				<div class="infoContainer">
