--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<!--<h1>The Periodic Table Of Elements</h1>-->
 		<h1 style="font-size: clamp(12px, 2vw, 25px)">O Περιοδικός πίνακας των χημικών στοιχείων</h1>
 
-		<button onclick="showBlocks()">Toggle blocks vew</button>
+		<button onclick="showBlocks()">Προβολή τομέων</button>
 
 		<div style="display: flex; align-items: center;">
 			<li class="empty" style="width: 80px; height: 80px; display: flex; align-items: flex-end;"> <b>Ατομικός</b> <abbr>Σύμβολο</abbr> <em>Όνομα</em> <data>Βάρος</data></li>
@@ -41,7 +41,7 @@
 				<span class="close">X</span>
 				<div id="CloseUp2"></div>
 				<div style="display: flex; justify-content: space-between;">
-					<h3>Ονομα</h3>
+					<h3>Όνομα</h3>
 					<h3 class="popup-name"></h3>
 				</div>
 				<hr style="margin: 10px 0;  border: none; border-top: 1px solid #676666;">
@@ -61,7 +61,7 @@
 				</div>
 				<hr style="margin: 10px 0;  border: none; border-top: 1px solid #676666;">
 				<div style="display: flex; justify-content: space-between;">
-					<h3>Block</h3>
+					<h3>Тομέας</h3>
 					<h3 class="popup-block"></h3>
 				</div>
 				<hr style="margin: 10px 0;  border: none; border-top: 1px solid #676666;">
