--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
 			<li class="empty" style="width: 80px; height: 80px; display: flex; align-items: flex-end;"> <b>Ατομικός</b> <abbr>Σύμβολο</abbr> <em>Όνομα</em> <data>Βάρος</data></li>
 			<li class="nonmetal" id="CloseUp" style=" width: 80px; height: 80px; display: flex; flex-direction: row; justify-content: space-between;">
 			<output style="display: flex; flex-direction: column; justify-content: space-between; line-height: 1;">
-				<b style=" font-size: 1em;">1</b> 
-				<abbr style=" font-size: 1.8em;">H</abbr> 
-				<em style=" font-size: .8em; letter-spacing: -0.050037em;">Υδρογόνο</em> 
-				<data style=" font-size: .8em;">1,008</data>
+				<b class="closeUp-atomic" style=" font-size: 1em;">1</b> 
+				<abbr class="closeUp-shortName" style=" font-size: 1.8em;">H</abbr> 
+				<em class="closeUp-name" style=" font-size: .8em; letter-spacing: -0.050037em;">Υδρογόνο</em> 
+				<data class="closeUp-mass" style=" font-size: .8em;">1,008</data>
 			</output>
 			<small style="font-size: .8em; text-align: end; display: flex; flex-direction: column; line-height: 11px;">
 				<span>1</span>
