--- a/index.html
+++ b/index.html
@@ -40,36 +40,36 @@
 			<div class="infoContainer">
 				<span class="close">X</span>
 				<div id="CloseUp2"></div>
-				<div style="display: flex; justify-content: space-between;">
+				<div>
 					<h3>Όνομα</h3>
 					<h3 class="popup-name"></h3>
 				</div>
-				<hr style="margin: 10px 0;  border: none; border-top: 1px solid #676666;">
-				<div style="display: flex; justify-content: space-between;">
+				<hr>
+				<div>
 					<h3>Ατομικός</h3>
 					<h3 class="popup-atomic"></h3>
 				</div>
-				<hr style="margin: 10px 0;  border: none; border-top: 1px solid #676666;">
-				<div style="display: flex; justify-content: space-between;">
+				<hr>
+				<div>
 					<h3>Ηλεκτρονική δομή</h3>
 					<h3 class="popup-energyLevels"></h3>
 				</div>
-				<hr style="margin: 10px 0;  border: none; border-top: 1px solid #676666;">
-				<div style="display: flex; justify-content: space-between;">
+				<hr>
+				<div>
 					<h3>Ταξινόμηση</h3>
 					<h3 class="popup-class"></h3>
 				</div>
-				<hr style="margin: 10px 0;  border: none; border-top: 1px solid #676666;">
-				<div style="display: flex; justify-content: space-between;">
+				<hr>
+				<div>
 					<h3>Тομέας</h3>
 					<h3 class="popup-block"></h3>
 				</div>
-				<hr style="margin: 10px 0;  border: none; border-top: 1px solid #676666;">
-				<div style="display: flex; justify-content: space-between;">
+				<hr>
+				<div>
 					<h3>Ανακαλύφθηκε</h3>
 					<h3 class="popup-discovered"></h3>
 				</div>
-				<hr style="margin: 10px 0;  border: none; border-top: 1px solid #676666;">
+				<hr>
 				<span class="popup-wikipediaLink linkText">Open to wiki</span>
 			</div>
 		</div>
