--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 					<h3 class="popup-discovered"></h3>
 				</div>
 				<hr>
-				<span class="popup-wikipediaLink linkText">Open to wiki</span>
+				<a class="popup-wikipediaLink" target="_blank">Ανοιγμα στη Βικιπαίδεια</a>
 			</div>
 		</div>
 		
