--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
 			<div class="infoContainer">
 				<span class="close">X</span>
 				<div id="CloseUp2"></div>
+				<a class="popup-pdfDownload">Λήψη αρχείου PDF</a>
+				<hr>
 				<div>
 					<h3>Όνομα</h3>
 					<h3 class="popup-name"></h3>
