--- a/index.html
+++ b/index.html
@@ -40,7 +40,10 @@
 			<div class="infoContainer">
 				<span class="close">X</span>
 				<div id="CloseUp2"></div>
-				<a class="popup-pdfDownload">Λήψη αρχείου PDF</a>
+				<div>
+					<a class="popup-pdfDownload">Λήψη αρχείου PDF</a>
+					<a class="popup-wikipediaLink" target="_blank">Ανοιγμα στη Βικιπαίδεια</a>
+				</div>
 				<hr>
 				<div>
 					<h3>Όνομα</h3>
@@ -72,7 +75,6 @@
 					<h3 class="popup-discovered"></h3>
 				</div>
 				<hr>
-				<a class="popup-wikipediaLink" target="_blank">Ανοιγμα στη Βικιπαίδεια</a>
 			</div>
 		</div>
 		
