--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
 					<td><div class="element alkali s" data-atomic="55"> <b>55</b> <abbr>Cs</abbr> <em>Καίσιο</em> <data>132,91</data> </div></td>
 					<td><div class="element alkaline s" data-atomic="56"> <b>56</b> <abbr>Ba</abbr> <em>Βάριο</em> <data>137,33</data> </div></td>
 					
-					<td><div class="element lanthanoid f" data-atomic="57"> <b></b> <abbr>57 - 71</abbr> <em></em> <data></data> </div></td>
+					<td><div class="element lanthanoid f" data-linkedElement="57"> <b></b> <abbr>57 - 71</abbr> <em></em> <data></data> </div></td>
 					<td><div class="element transition d" data-atomic="72"> <b>72</b> <abbr>Hf</abbr> <em>Άφνιο</em> <data>178,49</data> </div></td>
 					<td><div class="element transition d" data-atomic="73"> <b>73</b> <abbr>Ta</abbr> <em>Ταντάλιο</em> <data>180,95</data> </div></td>
 					<td><div class="element transition d" data-atomic="74"> <b>74</b> <abbr>W</abbr> <em>Βολφράμιο</em> <data>183,84</data> </div></td>
@@ -220,7 +220,7 @@
 					<td class="period">7</td>
 					<td><div class="element alkali s" data-atomic="87"> <b>87</b> <abbr>Fr</abbr> <em>Φράγκιο</em> <data>(223)</data> </div></td>
 					<td><div class="element alkaline s" data-atomic="88"> <b>88</b> <abbr>Ra</abbr> <em>Ράδιο</em> <data>(226)</data> </div></td>
-					<td><div class="element actinoid f" data-atomic="89"> <b></b> <abbr>89-103</abbr> <em></em> <data></data> </div></td>
+					<td><div class="element actinoid f" data-linkedElement="89"> <b></b> <abbr>89-103</abbr> <em></em> <data></data> </div></td>
 					<td><div class="element transition d" data-atomic="104"> <b>104</b> <abbr>Rf</abbr> <em>Ραδερφόρντιο</em> <data>(267)</data> </div></td>
 					<td><div class="element transition d" data-atomic="105"> <b>105</b> <abbr>Db</abbr> <em>Ντούμπνιο</em> <data>(268)</data> </div></td>
 					<td><div class="element transition d" data-atomic="106"> <b>106</b> <abbr>Sg</abbr> <em>Σιμπόργκιο</em> <data>(269)</data> </div></td>
