--- a/index.html
+++ b/index.html
@@ -122,7 +122,16 @@
 							<div class="unknown highlightElement hoverEffect"><span>Άγνωστα</span></div>
 						</div>
 					</td>
-					<td colspan="10"></td>
+					<td colspan="3"></td>
+					<td colspan="2">
+						<div class="elementsClassVew">
+							<div class="s highlightElement highlightElementBlocks hoverEffect"><span>s</span></div>
+							<div class="p highlightElement highlightElementBlocks hoverEffect"><span>p</span></div>
+							<div class="d highlightElement highlightElementBlocks hoverEffect"><span>d</span></div>
+							<div class="f highlightElement highlightElementBlocks hoverEffect"><span>f</span></div>
+						</div>
+					</td>
+					<td colspan="5"></td>
 					<td><div class="element noble s" data-atomic="2"> <b>2</b> <abbr>He</abbr> <em>Ήλιο</em> <data>4,0026</data> </div></td>
 				</tr>
 				<tr>
