--- a/index.html
+++ b/index.html
@@ -61,6 +61,11 @@
 				</div>
 				<hr>
 				<div>
+					<h3>Βάρος:</h3>
+					<h3 class="popup-mass"></h3>
+				</div>
+				<hr>
+				<div>
 					<h3>Ταξινόμηση:</h3>
 					<h3 class="popup-class"></h3>
 				</div>
