--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 				<data>Βάρος</data>
 			</div>
 			<div class="elementStyle nonmetal" id="CloseUp" style=" width: 80px; height: 80px; display: flex; flex-direction: row; justify-content: space-between;">
-				<output style="display: flex; flex-direction: column; justify-content: space-between; line-height: 1;">
+				<output style="display: flex; flex-direction: column; justify-content: space-between; line-height: 1; min-width: 0;">
 					<b class="closeUp-atomic" style=" font-size: 1em;">X</b> 
 					<abbr class="closeUp-shortName" style=" font-size: 1.8em;">A</abbr> 
 					<em class="closeUp-name" style="font-size: .8em;">A</em> 
