--- a/index.html
+++ b/index.html
@@ -17,7 +17,14 @@
 		<select id="visualizeOption">
 			<option value="ChemicalGroupBlock">Μπλοκ Χημικής Ομάδας</option>
 			<option value="ElectronConfiguration">Διαμόρφωση ηλεκτρονίων</option>
+			<option value="State">Κατάσταση</option>
+
 			<option value="AtomicMass">Ατομική Μάζα</option>
+			<option value="MeltPoint">Σημείο τήξης</option>
+			<option value="BoilPoint">Σημείο ζέσεως</option>
+			<option value="Electronegativity">Ηλεκτραρνητικότητα</option>
+			<option value="ElectronAffinity">Ηλεκτροσυγγένεια</option>
+			<option value="Ionization">Ιονισμός</option>
 		</select>
 
 		<div style="display: flex; align-items: center;">
