--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 			<option value="State">Κατάσταση</option>
 
 			<option value="AtomicMass">Ατομική Μάζα</option>
+			<option value="EnergyLevels">Energy Levels</option>
 			<option value="MeltPoint">Σημείο τήξης</option>
 			<option value="BoilPoint">Σημείο ζέσεως</option>
 			<option value="Electronegativity">Ηλεκτραρνητικότητα</option>
