--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
 
 		<script language="javascript" src="JS/UrlParamsUtils.js" type="text/javascript"></script>
 		
-		<script language="javascript" src="JS/Other.js" type="text/javascript"></script>
+		<script language="javascript" src="JS/Viuals_Functions.js" type="text/javascript"></script>
 
 		<script language="javascript" src="JS/TableScript.js" type="text/javascript"></script>
 	</body>
