--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 				<b>Ατομικός</b>
 				<abbr>Σύμβολο</abbr>
 				<em>Όνομα</em>
-				<data>Βάρος</data>
+				<data>Δεδομένα</data>
 			</div>
 			<div class="elementStyle nonmetal" id="CloseUp" style=" width: 80px; height: 80px; display: flex; flex-direction: row; justify-content: space-between;">
 				<output style="display: flex; flex-direction: column; justify-content: space-between; line-height: 1; min-width: 0;">
