--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
 					<td><div class="element lanthanoid f" data-atomic="68"> <b>68</b> <abbr>Er</abbr> <em>Έρβιο</em> <data>167.26</data> </div></td>
 					<td><div class="element lanthanoid f" data-atomic="69"> <b>69</b> <abbr>Tm</abbr> <em>Θούλιο</em> <data>168.93</data> </div></td>
 					<td><div class="element lanthanoid f" data-atomic="70"> <b>70</b> <abbr>Yb</abbr> <em>Υττέρβιο</em> <data>173.05</data> </div></td>
-					<td><div class="element lanthanoid d" data-atomic="71"> <b>71</b> <abbr>Lu</abbr> <em>Λουτήτιο</em> <data>174.97</data> </div></td>
+					<td><div class="element lanthanoid f" data-atomic="71"> <b>71</b> <abbr>Lu</abbr> <em>Λουτήτιο</em> <data>174.97</data> </div></td>
 				</tr>
 				
 				<tr>
@@ -311,7 +311,7 @@
 					<td><div class="element actinoid f" data-atomic="100"> <b>100</b> <abbr>Fm</abbr> <em>Φέρμιο</em> <data>(257)</data> </div></td>
 					<td><div class="element actinoid f" data-atomic="101"> <b>101</b> <abbr>Md</abbr> <em>Μεντελέβιο</em> <data>(258)</data> </div></td>
 					<td><div class="element actinoid f" data-atomic="102"> <b>102</b> <abbr>No</abbr> <em>Νομπέλιο</em> <data>(259)</data> </div></td>
-					<td><div class="element actinoid d" data-atomic="103"> <b>103</b> <abbr>Lr</abbr> <em>Λωρένσιο</em> <data>(266)</data> </div></td>
+					<td><div class="element actinoid f" data-atomic="103"> <b>103</b> <abbr>Lr</abbr> <em>Λωρένσιο</em> <data>(266)</data> </div></td>
 				</tr>
 			</table>
 		</div>
