--- a/index.html
+++ b/index.html
@@ -65,41 +65,7 @@
 					<a class="popup-wikipediaLink" target="_blank">Ανοιγμα στη Βικιπαίδεια</a>
 				</div>
 				<hr>
-				<div>
-					<h3>Ονομα:</h3>
-					<h3 class="popup-name"></h3>
-				</div>
-				<hr>
-				<div>
-					<h3>Ατομικός:</h3>
-					<h3 class="popup-atomic"></h3>
-				</div>
-				<hr>
-				<div>
-					<h3>Ηλεκτρονική δομή:</h3>
-					<h3 class="popup-energyLevels"></h3>
-				</div>
-				<hr>
-				<div>
-					<h3>Βάρος:</h3>
-					<h3 class="popup-mass"></h3>
-				</div>
-				<hr>
-				<div>
-					<h3>Ταξινόμηση:</h3>
-					<h3 class="popup-class"></h3>
-				</div>
-				<hr>
-				<div>
-					<h3>Тομέας:</h3>
-					<h3 class="popup-block"></h3>
-				</div>
-				<hr>
-				<div>
-					<h3>Ανακαλύφθηκε:</h3>
-					<h3 class="popup-discovered"></h3>
-				</div>
-				<hr>
+				<span class="popup-data"></span>
 			</div>
 		</div>
 
