--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 					<td colspan="3"></td>
 					<td colspan="2"></td>
 					<td colspan="5">
-						<label for="temp">Temperature (C)</label>
+						<label for="temp">Θερμοκρασία (C)</label>
 						<br>
 						<input id="tempNumInput" type="number" min="-273" max="6727" step="1" value="0">
 						<input id="temp" type="range" min="0" max="7000" step="1" value="273">
