Added new viewing mode

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 			<option value="ChemicalGroupBlock">Μπλοκ Χημικής Ομάδας</option>
 			<option value="ElectronConfiguration">Διαμόρφωση ηλεκτρονίων</option>
 			<option value="State">Κατάσταση</option>
-
+			
 			<option value="AtomicMass">Ατομική Μάζα</option>
 			<option value="EnergyLevels">Energy Levels</option>
 			<option value="MeltPoint">Σημείο τήξης</option>
@@ -27,6 +27,8 @@
 			<option value="Electronegativity">Ηλεκτραρνητικότητα</option>
 			<option value="ElectronAffinity">Ηλεκτροσυγγένεια</option>
 			<option value="Ionization">Ιονισμός</option>
+
+			<option value="DiscoveryYear">Έτος Ανακάλυψης</option>
 		</select>
 
 		<div style="display: flex; align-items: center;">
