--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
 					<td><div class="element alkali s" data-atomic="55"> <b>55</b> <abbr>Cs</abbr> <em>Καίσιο</em> <data>132.91</data> </div></td>
 					<td><div class="element alkaline s" data-atomic="56"> <b>56</b> <abbr>Ba</abbr> <em>Βάριο</em> <data>137.33</data> </div></td>
 					
-					<td rowspan="5"><div class="lanth-Act">
+					<td rowspan="5"><div class="lanth-Act f">
 						<b>57 - 71</b>
 						<div style="height: 50px;"></div>
 						<b>89-103</b>
