--- a/index.html
+++ b/index.html
@@ -39,12 +39,12 @@
 				<em>Όνομα</em>
 				<data>Δεδομένα</data>
 			</div>
-			<div class="elementStyle nonmetal" id="CloseUp" style=" width: 80px; height: 80px; display: flex; flex-direction: row; justify-content: space-between;">
-				<output style="display: flex; flex-direction: column; justify-content: space-between; line-height: 1; min-width: 0;">
-					<b class="closeUp-atomic" style=" font-size: 1em;">X</b> 
-					<abbr class="closeUp-shortName" style=" font-size: 1.8em;">A</abbr> 
-					<em class="closeUp-name" style="font-size: .8em;">A</em> 
-					<data class="closeUp-mass" style=" font-size: .8em;">X</data>
+			<div class="nonmetal" id="CloseUp">
+				<output>
+					<b class="closeUp-atomic">X</b> 
+					<abbr class="closeUp-shortName">A</abbr> 
+					<em class="closeUp-name">A</em> 
+					<data class="closeUp-mass">X</data>
 				</output>
 				<small style="font-size: .8em; text-align: end; display: flex; flex-direction: column; line-height: 11px;">
 					<span>X</span>
