Updated index.html and Visuals_Functions.js

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="el" class="chemicalGroupBlock">
+<html lang="el">
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -15,21 +15,21 @@
 		
 		<label for="visualizeOption">Επιλογή οπτικοποίησης:</label>
 		<select id="visualizeOption">
-			<option value="ChemicalGroupBlock">Μπλοκ Χημικής Ομάδας</option>
-			<option value="ElectronConfiguration">Διαμόρφωση ηλεκτρονίων</option>
-			<option value="State">Κατάσταση</option>
+			<option value="chemicalGroupBlock">Μπλοκ Χημικής Ομάδας</option>
+			<option value="blocks">Διαμόρφωση ηλεκτρονίων</option>
+			<option value="state">Κατάσταση</option>
 			
-			<option value="AtomicMass">Ατομική Μάζα</option>
-			<option value="EnergyLevels">Ηλεκτρονική δομή</option>
-			<option value="MeltPoint">Σημείο τήξης</option>
-			<option value="BoilPoint">Σημείο ζέσεως</option>
-			<option value="Density">Πυκνότητα</option>
-			<option value="Electronegativity">Ηλεκτραρνητικότητα</option>
-			<option value="ElectronAffinity">Ηλεκτροσυγγένεια</option>
-			<option value="Ionization">Ιονισμός</option>
-			<option value="Radius">Ακτίνα</option>
+			<option value="atomicMass">Ατομική Μάζα</option>
+			<option value="energyLevels">Ηλεκτρονική δομή</option>
+			<option value="meltPoint">Σημείο τήξης</option>
+			<option value="boilPoint">Σημείο ζέσεως</option>
+			<option value="density">Πυκνότητα</option>
+			<option value="electronegativity">Ηλεκτραρνητικότητα</option>
+			<option value="electronAffinity">Ηλεκτροσυγγένεια</option>
+			<option value="ionization">Ιονισμός</option>
+			<option value="radius">Ακτίνα</option>
 
-			<option value="DiscoveryYear">Έτος Ανακάλυψης</option>
+			<option value="discoveryDate">Έτος Ανακάλυψης</option>
 		</select>
 
 		<div style="display: flex; align-items: center;">
