--- a/index.html
+++ b/index.html
@@ -19,15 +19,15 @@
 			<option value="blocks">Διαμόρφωση ηλεκτρονίων</option>
 			<option value="state">Κατάσταση</option>
 			
-			<option value="atomicMass">Ατομική Μάζα</option>
+			<option value="atomicMass">Ατομική Μάζα (u)</option>
 			<option value="energyLevels">Ηλεκτρονική δομή</option>
-			<option value="meltPoint">Σημείο τήξης</option>
-			<option value="boilPoint">Σημείο ζέσεως</option>
-			<option value="density">Πυκνότητα</option>
+			<option value="meltPoint">Σημείο τήξης (K)</option>
+			<option value="boilPoint">Σημείο ζέσεως (K)</option>
+			<option value="density">Πυκνότητα (kJ/m<sup>3</sup>)</option>
 			<option value="electronegativity">Ηλεκτραρνητικότητα</option>
-			<option value="electronAffinity">Ηλεκτροσυγγένεια</option>
-			<option value="ionization">Ιονισμός</option>
-			<option value="radius">Ακτίνα</option>
+			<option value="electronAffinity">Ηλεκτροσυγγένεια (kJ/mol)</option>
+			<option value="ionization">Ιονισμός (kJ/mol)</option>
+			<option value="radius">Ακτίνα (pm)</option>
 
 			<option value="discoveryDate">Έτος Ανακάλυψης</option>
 		</select>
