Small visual fixes

--- a/index.html
+++ b/index.html
@@ -156,7 +156,9 @@
 					<td colspan="3"></td>
 					<td colspan="2"></td>
 					<td colspan="5">
-						
+						<p style="margin: 0px;" id="ViewDescription">
+							
+						</p>
 					</td>
 					<td><div class="element noble s" data-atomic="2"> <b>2</b> <abbr>He</abbr> <em>Ήλιο</em> <data>4.0026</data> </div></td>
 				</tr>
