some names corrected

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 		
 		<label for="visualizeOption">Επιλογή οπτικοποίησης:</label>
 		<select id="visualizeOption">
-			<option value="chemicalGroupBlock">Μπλοκ Χημικής Ομάδας</option>
-			<option value="blocks">Διαμόρφωση ηλεκτρονίων</option>
+			<option value="category">Κατηγορία</option>
+			<option value="blocks">Μπλοκ ηλεκτρονιακής διάταξης</option>
 			<option value="state">Κατάσταση</option>
 			
 			<option value="atomicMass">Ατομική Μάζα (u)</option>
