Updated index and Visuals_Functions

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 				<label>
 					<input type="radio" name="visOption" value="abundance">
 					Αφθονία
-					<select>
+					<select id="subOptions">
 						<option value="universe">Σύμπαν</option>
 						<option value="solar">Ηλιακό</option>
 						<option value="meteor">Μετεωρίτες</option>
